src/test/deca/syntax/invalid/print/no_parenthesis_printx_11.deca
// Description:
//    Tests a syntactically incorrect program for a printx call with no parentheses
//
// Results:
//    Line 11 : Error, unexpected token. Expected a '('.
//
// History:
//    created on 17/12/2024

{
        printx"Hello";
}